Fixed jumping header when modals is open

--- a/app/src/blocks/btn-white.scss
+++ b/app/src/blocks/btn-white.scss
@@ -1,6 +1,7 @@
+//TODO Допилить картинку у фотки
 .btn-white {
 	display: inline-block;
-	background: url($path + 'img/overview.png') no-repeat 15px 50%;
+	//background: url($path + 'img/overview.png') no-repeat 15px 50%;
 	height: 54px;
 	line-height: 54px;
 	color: $color-main;
