--- a/app/src/global/global.scss
+++ b/app/src/global/global.scss
@@ -16,12 +16,6 @@ body {
 		.header {
 			padding-right: 17px;
 		}
-
-		//todo прыгает поиск
-		.search {
-			padding-right: 17px;
-			padding-left: 15px;
-		}
 	}
 }
 
